# server/api/controllers/class/router.js
@@ -1,0 +1,6 @@
+import Controller from './controller';
+import * as express from 'express';
+
+export default express
+                .Router()
+                .get('/:id', Controller.getOne)
